--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -1,24 +1,208 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14269.12" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BTv-uN-Ezy">
+    <device id="ipad10_5" orientation="landscape">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14252.5"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Emoji Art View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="EmojiArtViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="791.5" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRY-ti-SaS">
+                                <rect key="frame" x="0.0" y="108" width="791.5" height="726"/>
+                                <subviews>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kod-cs-aYm">
+                                        <rect key="frame" x="0.0" y="0.0" width="791.5" height="726"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" priority="250" constant="791.5" id="hqD-u0-zf0"/>
+                                            <constraint firstAttribute="height" priority="250" constant="834" id="pdb-Zx-aEp"/>
+                                        </constraints>
+                                    </scrollView>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kod-cs-aYm" secondAttribute="trailing" id="CJQ-wu-bQ3"/>
+                                    <constraint firstItem="kod-cs-aYm" firstAttribute="top" relation="greaterThanOrEqual" secondItem="xRY-ti-SaS" secondAttribute="top" id="R3k-HB-0rN"/>
+                                    <constraint firstItem="kod-cs-aYm" firstAttribute="centerY" secondItem="xRY-ti-SaS" secondAttribute="centerY" id="Znx-Vz-GFd"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kod-cs-aYm" secondAttribute="bottom" id="bpU-g2-RFR"/>
+                                    <constraint firstItem="kod-cs-aYm" firstAttribute="centerX" secondItem="xRY-ti-SaS" secondAttribute="centerX" id="iqp-zF-g9J"/>
+                                    <constraint firstItem="kod-cs-aYm" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xRY-ti-SaS" secondAttribute="leading" id="piI-FH-IIC"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XM3-o8-OjI">
+                                <rect key="frame" x="0.0" y="20" width="791.5" height="80"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="wpZ-k1-WXb"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BUp-Da-6UY">
+                                    <size key="itemSize" width="87" height="80"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="EmojiCell" id="JP5-rz-QDg" customClass="EmojiCollectionViewCell" customModule="EmojiArt" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="87" height="80"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="87" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="😄" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NmH-q8-FOb">
+                                                    <rect key="frame" x="0.0" y="-8" width="87" height="97"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="81"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="label" destination="NmH-q8-FOb" id="SiT-Ut-10l"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DropPlaceholderCell" id="pvA-lo-w6a" customClass="EmojiCollectionViewCell" customModule="EmojiArt" customModuleProvider="target">
+                                        <rect key="frame" x="97" y="0.0" width="87" height="80"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="87" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="br2-Wn-7b5">
+                                                    <rect key="frame" x="0.0" y="-8" width="0.0" height="0.0"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="81"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="eH9-Ra-L2J">
+                                                    <rect key="frame" x="34" y="30" width="20" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                        </view>
+                                        <connections>
+                                            <outlet property="label" destination="br2-Wn-7b5" id="tdU-Jo-aif"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xRY-ti-SaS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="10V-PN-LOT"/>
+                            <constraint firstItem="xRY-ti-SaS" firstAttribute="top" secondItem="XM3-o8-OjI" secondAttribute="bottom" constant="8" symbolic="YES" id="4wq-0D-Tna"/>
+                            <constraint firstItem="XM3-o8-OjI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Hda-mu-M52"/>
+                            <constraint firstItem="XM3-o8-OjI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Qg4-2T-yaB"/>
+                            <constraint firstItem="xRY-ti-SaS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="TSd-aM-cJQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XM3-o8-OjI" secondAttribute="trailing" id="Ytj-RY-4rg"/>
+                            <constraint firstAttribute="trailing" secondItem="xRY-ti-SaS" secondAttribute="trailing" id="fhE-jr-pne"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="dropZone" destination="xRY-ti-SaS" id="KrH-C8-Bt7"/>
+                        <outlet property="emojiCollectionView" destination="XM3-o8-OjI" id="Xfp-XT-Wfd"/>
+                        <outlet property="scrollView" destination="kod-cs-aYm" id="dWt-Se-KdE"/>
+                        <outlet property="scrollViewHeight" destination="pdb-Zx-aEp" id="7xl-Wf-RWV"/>
+                        <outlet property="scrollViewWidth" destination="hqD-u0-zf0" id="fK3-uM-fEb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="33.992805755395686" y="40.287769784172667"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="hFz-JA-BGW">
+            <objects>
+                <splitViewController id="BTv-uN-Ezy" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="detailViewController" id="Hc7-6I-ydY"/>
+                        <segue destination="wP7-P8-A1P" kind="relationship" relationship="masterViewController" id="SOG-nk-RsY"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4gd-wK-rvh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-674" y="40"/>
+        </scene>
+        <!--Emoji Art Document Table View Controller-->
+        <scene sceneID="6gV-0g-C98">
+            <objects>
+                <tableViewController id="nig-na-Ffq" customClass="EmojiArtDocumentTableViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pzQ-YP-Wnv">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="834"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DocumentCell" textLabel="vJg-PS-egU" rowHeight="37" style="IBUITableViewCellStyleDefault" id="r51-mv-qvc">
+                                <rect key="frame" x="0.0" y="28" width="320" height="37"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="r51-mv-qvc" id="Xhu-xT-kt0">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="36.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vJg-PS-egU">
+                                            <rect key="frame" x="16" y="0.0" width="288" height="36.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="showDetail" id="G2f-j5-LDS"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="nig-na-Ffq" id="MMa-vf-0e8"/>
+                            <outlet property="delegate" destination="nig-na-Ffq" id="KQh-0A-aoh"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="yND-BL-fjQ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="J8v-Vl-kN2">
+                            <connections>
+                                <action selector="newEmojiArt:" destination="nig-na-Ffq" id="GTe-R1-3CP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t2d-Wt-V9v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="679.85611510791364" y="-829.49640287769785"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="avl-UG-Qb9">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wP7-P8-A1P" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="o7O-w1-4wP">
+                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="nig-na-Ffq" kind="relationship" relationship="rootViewController" id="4VG-sq-X7o"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZAU-n9-O6r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-10" y="-829"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Hc7-6I-ydY"/>
+    </inferredMetricsTieBreakers>
 </document>
